--- a/src/sass/partials/_uiparts.sass
+++ b/src/sass/partials/_uiparts.sass
@@ -48,7 +48,7 @@
 
 .type-select
   width: 250px
-  margin: 30px auto 40px
+  margin: 0 auto 40px
 
 .amount-select
   display: inline-block
@@ -68,6 +68,7 @@
   +trans
   &:hover
     opacity: 1
+    color: $color-blue
   .open &
     opacity: 1
     background: $color-blue
