--- a/src/templates/partials/_attendance.html
+++ b/src/templates/partials/_attendance.html
@@ -6,7 +6,11 @@
         Please input correct information as all important statistics
         & benchmarks will not be shown properly in your CMS.
       </p>
-      <div class="attendance__value">100-150</div>
+      <div class="attendance__value">
+        <div class="attendance__value-inner">
+          <span class="attendance__value-text">0-50</span>
+        </div>
+      </div>
     </div>
     <div class="attendance__footer">
       <div class="l">
