--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="lib/bootstrap/js/tab.js" defer></script>
     <script type="text/javascript" src="lib/bootstrap/js/dropdown.js" defer></script>
     <script type="text/javascript" src="lib/nouislider/distribute/nouislider.js" defer></script>
+    <script type="text/javascript" src="lib/svgxuse/svgxuse.min.js" defer></script>
     <script type="text/javascript" src="js/app.js" defer></script>
     <!-- END scripts -->
   </head>
