--- a/src/sass/partials/_uiparts.sass
+++ b/src/sass/partials/_uiparts.sass
@@ -52,6 +52,8 @@
 
 .amount-select
   display: inline-block
+  .dropdown-menu
+    min-width: 0
 
 .btn-round
   position: relative
@@ -126,7 +128,7 @@
   text-align: center
   justify-content: center
 
-.tab-group__btn
+.tab-group__item
   display: inline-block
   vertical-align: top
   height: 46px
@@ -144,11 +146,34 @@
     margin-left: -1px
   &:hover
     color: $color-text-main
-  &.is-active
+  &.active
     border-color: $color-border
     border-bottom-color: rgba(white, 0)
     color: $color-blue
     cursor: default
+
+.tab-group__btn
+  display: block
+  background: none
+  color: inherit
+  height: 100%
+  width: 100%
+  +f(b, 14)
+  text-transform: uppercase
+
+.tab-content-group
+  background: $color-blue
+
+.tab-content
+  display: none
+  &.active
+    display: block
+  &.fade
+    opacity: 0
+    transition: opacity 0.3s ease
+  &.in
+    opacity: 1
+
 
 .cta-btn
   position: relative
@@ -253,6 +278,7 @@
   font-size: 17px
   color: inherit
   +trans(color)
+  cursor: pointer
   &:hover
     color: $color-blue
 
@@ -398,9 +424,13 @@
     margin-bottom: 10px
   .demo-btn
     position: relative
-    width: 0
+    width: 1px
     top: 2px
     left: 18px
+  .hint
+    position: relative
+    width: 1px
+    padding-right: 0
   &.l-cell
     border-left: 2px solid $color-bg-main
     &:first-child
@@ -468,3 +498,71 @@
   right: 0
   padding: 0 25px
   font-size: 14px
+
+.dropdown-menu
+  position: absolute
+  z-index: 2
+  top: 100%
+  left: 0
+  margin-top: 2px
+  box-sizing: border-box
+  background: #FFF
+  border: 1px solid $color-border
+  border-radius: 3px
+  width: 100%
+  max-width: 300px
+  min-width: 160px
+  overflow: hidden
+  transition: all 0.2s ease
+  transform: scale(1, 0)
+  transform-origin: center top
+  visibility: hidden
+  opacity: 0
+  &_double
+    +clr
+    &:before
+      content: ""
+      position: absolute
+      top: 5px
+      bottom: 5px
+      left: 50%
+      border-left: 1px solid $color-border
+    .dropdown-menu__list
+      width: 50%
+      float: left
+  &_date
+    max-width: 160px
+    height: 210px
+    text-align: center
+  .open &
+    visibility: visible
+    opacity: 1
+    transform: scale(1, 1)
+
+.dropdown-menu__list
+  list-style-type: none
+  padding: 0
+  margin: 0
+  height: 100%
+  overflow: auto
+  max-height: 240px
+  +smooth-scroll
+
+.dropdown-menu__item
+  background: none
+  height: 30px
+  line-height: 30px
+  white-space: nowrap
+  width: 100%
+  padding: 0 10px
+  +text-overflow
+  +trans
+  box-sizing: border-box
+  transition-property: background-color, color
+  font-size: 16px
+  cursor: default
+  color: $color-text-main
+  &:hover,
+  &.is-selected
+    background: $color-blue
+    color: #FFF
