--- a/src/templates/layouts/_head.html
+++ b/src/templates/layouts/_head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <title>{% if title %}{{ title }}{% else %}Template{% endif %}</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="viewport" content="width=1240, initial-scale=1.0">
+<meta name="viewport" content="width=1240">
 <meta name="theme-color" content="#fff">
 <meta name="format-detection" content="telephone=no">
 <link rel="stylesheet" media="all" href="css/app.css">
