--- a/src/templates/partials/_attendance.html
+++ b/src/templates/partials/_attendance.html
@@ -8,7 +8,7 @@
       </p>
       <div class="attendance__value">
         <div class="attendance__value-inner">
-          <span class="attendance__value-text">0-50</span>
+          <span class="attendance__value-text"></span>
         </div>
       </div>
     </div>
