--- a/src/sass/partials/_nouislider-theme.sass
+++ b/src/sass/partials/_nouislider-theme.sass
@@ -95,11 +95,11 @@
       opacity: 1
       visibility: visible
       transform: translate3d(-50%,0,0) rotateX(0deg)
-  .noUi-active &
-    .icon
-      opacity: 0
-      visibility: hidden
-      transform: translate3d(-50%,0,0) rotateX(90deg)
+  //.noUi-active &
+  //  .icon
+  //    opacity: 0
+  //    visibility: hidden
+  //    transform: translate3d(-50%,0,0) rotateX(90deg)
   .noUi-handle &
     display: block
 
@@ -133,3 +133,52 @@
     height: 5px
     border-radius: 50%
     background: white
+
+.slider-value
+  display: inline-block
+  vertical-align: top
+  min-width: 264px
+  padding: 0 20px
+  height: 74px
+  margin: 40px auto 0
+  box-sizing: content-box
+  border-radius: 5px
+  text-align: center
+  //border: 2px solid
+  font-size: 59px
+  line-height: 74px
+  position: relative
+  transition: width 0.2s ease
+  overflow: hidden
+  &:after
+    content: ""
+    position: absolute
+    z-index: 1
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    border-radius: 5px
+    box-sizing: border-box
+    border: 2px solid
+    box-shadow: 0 0 20px 0 #529EF7 inset
+  &.is-decrease
+    .slider-value__inner
+      transform: translateY(100%)
+      opacity: 0
+  &.is-increase
+    .slider-value__inner
+      transform: translateY(-100%)
+      opacity: 0
+
+.slider-values-list
+  position: absolute
+  top: 0
+  left: 50%
+  width: 500px
+  margin-left: -250px
+  transition: all 0.4s ease
+
+.slider-value-list-item
+  height: 74px
+  //line-height: 86px
