--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -9,8 +9,8 @@ body
   min-width: $layout-width + 40px
   &.modal-open
     overflow: hidden
-    .l-content-wrapper
-      filter: blur(4px)
+    //.l-content-wrapper
+    //  filter: blur(4px)
   &.page-with-sidebar
     height: 100%
     min-width: $layout-width + 40 + 300px
@@ -79,6 +79,8 @@ a
   align-items: stretch
   align-content: stretch
   flex-wrap: nowrap
+  &_align-center
+    align-items: center
 
 .l-col
   box-sizing: border-box
