--- a/src/templates/partials/_attendance.html
+++ b/src/templates/partials/_attendance.html
@@ -13,16 +13,16 @@
         <div class="attendance__slider">
           <div class="slider"></div>
           <ul class="slider-points">
-            <li class="slider-point">0-50</li>
-            <li class="slider-point">50-100</li>
-            <li class="slider-point">100-250</li>
-            <li class="slider-point">250-500</li>
-            <li class="slider-point">500-1,000</li>
-            <li class="slider-point">1,000-3,000</li>
-            <li class="slider-point">3,000-5,000</li>
-            <li class="slider-point">5,000-10,000</li>
-            <li class="slider-point">10,000-25,000</li>
-            <li class="slider-point">25,000+</li>
+            {#<li class="slider-point">0-50</li>#}
+            {#<li class="slider-point">50-100</li>#}
+            {#<li class="slider-point">100-250</li>#}
+            {#<li class="slider-point">250-500</li>#}
+            {#<li class="slider-point">500-1,000</li>#}
+            {#<li class="slider-point">1,000-3,000</li>#}
+            {#<li class="slider-point">3,000-5,000</li>#}
+            {#<li class="slider-point">5,000-10,000</li>#}
+            {#<li class="slider-point">10,000-25,000</li>#}
+            {#<li class="slider-point">25,000+</li>#}
           </ul>
           <div class="slider-tooltip">
             {{ mixins.icon('man') }}
