--- a/src/sass/partials/_modal.sass
+++ b/src/sass/partials/_modal.sass
@@ -12,12 +12,12 @@
   width: 100%
   height: 100%
   z-index: 998
-  background: rgba(white, 0.27)
-  &.fade
-    transition: opacity 0.15s linear
-    opacity: 0
-  &.in
-    opacity: 1
+  //background: rgba(white, 0.9)
+  //&.fade
+  //  transition: opacity 0.1s linear
+  //  opacity: 0
+  //&.in
+  //  opacity: 1
 
 .modal
   display: none
@@ -34,12 +34,15 @@
   +vertical
   +smooth-scroll
   &.fade
+    background-color: rgba(white, 0)
+    transition: background-color 0.3s ease
     .modal-dialog
       transform: scale(1.1)
       transition: 0.3s ease
       transition-property: opacity, transform
       opacity: 0
   &.in
+    background-color: rgba(white, 0.9)
     .modal-dialog
       transform: scale(1)
       opacity: 1
