--- a/src/templates/partials/_sidebar.html
+++ b/src/templates/partials/_sidebar.html
@@ -56,7 +56,7 @@
 
       <ul class="payment__tabs l-row">
         <li class="payment__tab l-cell active">
-          <button class="payment__tab-btn" data-toggle="tab" data-target="#monthly-payments">Monthly</button>
+          <button class="payment__tab-btn" data-toggle="tab" data-target="#monthly-payments">Monthly <small>&nbsp;</small></button>
         </li>
         <li class="payment__tab l-cell">
           <button class="payment__tab-btn" data-toggle="tab" data-target="#annually-payments">Annually <small>10% Off</small></button>
